--- a/app/src/main/res/layout/activity_jogovelhaframe2.xml
+++ b/app/src/main/res/layout/activity_jogovelhaframe2.xml
@@ -8,6 +8,7 @@
     tools:context=".jogovelhaframe2"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="#BADBFF"
 
     >
 
