--- a/app/src/main/res/layout/activity_jogador_vsjogador.xml
+++ b/app/src/main/res/layout/activity_jogador_vsjogador.xml
@@ -21,6 +21,16 @@
     android:textSize="20dp"
     android:layout_marginBottom="2dp"
     />
+    <TextView
+        android:id="@+id/vez"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=" "
+        android:gravity="center"
+        android:fontFamily="sans-serif-black"
+        android:textSize="20dp"
+        android:layout_marginBottom="2dp"
+        />
 
     <LinearLayout
         android:id="@+id/lly1"
