--- a/app/src/main/res/layout/activity_jogador_vsjogador.xml
+++ b/app/src/main/res/layout/activity_jogador_vsjogador.xml
@@ -118,6 +118,17 @@
     </LinearLayout>
 
 
+     <Button
+         android:layout_marginTop="40dp"
+         android:id="@+id/reset"
+         android:layout_width="100dp"
+         android:layout_height="50dp"
+          android:text="reset"
+         android:visibility="invisible"
+         >
+
+     </Button>
+
 
 
 
